[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/zombie.png" type="Texture" id=1]
[ext_resource path="res://scripts/Zombie.gd" type="Script" id=2]
[ext_resource path="res://scenes/Confusion.tscn" type="PackedScene" id=3]
[ext_resource path="res://samples/zombie_attack.wav" type="AudioStream" id=4]
[ext_resource path="res://samples/zombie_arrival2.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 318, 282, 106, 141 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 424, 564, 106, 141 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 530, 564, 106, 141 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 636, 564, 106, 141 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 742, 564, 106, 141 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 705, 106, 141 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 106, 705, 106, 141 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 212, 705, 106, 141 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 318, 705, 106, 141 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 106, 141 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 106, 0, 106, 141 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 212, 0, 106, 141 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "attack",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 26.0975, 43.9188 )

[node name="Zombie" type="Area2D" groups=[
"enemies",
]]
light_mask = 8
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )
speed = 100
max_hp = 10
base_damage = 5

[node name="Animation" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "idle"
offset = Vector2( 0, -57 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -43.952 )
shape = SubResource( 14 )

[node name="ConfusionTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Confusion" parent="." instance=ExtResource( 3 )]
show_behind_parent = true
position = Vector2( 0, -50 )

[node name="Arrival" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="Attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
pitch_scale = 0.8
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="timeout" from="ConfusionTimer" to="." method="_on_ConfusionTimer_timeout"]
